<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cch.selflog.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_db"
        android:orderInCategory="100"
        android:title="@string/menu_database"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_view"
        android:orderInCategory="100"
        android:title="@string/menu_viewData"
        app:showAsAction="never"/>
    
     <item
        android:id="@+id/menu_misc"
        android:orderInCategory="100"
        android:title="@string/menu_misc"
        app:showAsAction="never"/>

</menu>
