<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/content_test"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    >
    <LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	
        <TextView
            android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/date"/>
        <EditText
            android:layout_weight="5"
            android:id="@+id/tbox_feeDate"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            />
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	
        <TextView
            android:layout_weight="1"
			android:gravity="fill_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/item"/>
        <Spinner
            android:layout_weight="5"
		    android:id="@+id/cbox_item"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	
        <TextView
            android:layout_weight="1"
			android:gravity="fill_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/personName"/>
        <Spinner
            android:layout_weight="5"
		    android:id="@+id/cbox_personName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	
        <TextView
            
            android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fee"/>
        <EditText
            android:inputType="numberDecimal"
            android:layout_weight="5"
            android:id="@+id/tbox_fee"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            />
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	
        <TextView
            android:layout_weight="1"
			android:gravity="fill_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/feeType"/>
        <Spinner
            android:layout_weight="5"
		    android:id="@+id/cbox_itemType"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
        <TextView
            android:layout_weight="1"
			android:gravity="fill_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/comment"/>
        <EditText
            android:layout_weight="5"
            android:id="@+id/tbox_comment"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            />
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	
	    
       <Button
	    android:id="@+id/btn_commit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/commit" />
       
        <Button
	    android:id="@+id/btn_cancel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel" />
	</LinearLayout>

	
	
</LinearLayout>

